# c_learning

libuv_stdin_to_stdout/: CMakeLists.txt  main.c
snake/: .gitignore  CMakeLists.txt  main.c  test.txt
snake/loop/: event.c  event.h
snake/src/entity/: entity.c  entity.h  utility.h
snake/src/loop/: utility.c  utility.h
snake/src/snake/: snake.c  snake.h  snake_event.c  snake_event.h
snake/src/world/: world.c  world.h  world_event.c  world_event.h
snake/world/: entity.c  entity.h  world.c  world.h
